--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,14 @@ h2{
     width: 180px;
     height: 6px;
     border-radius: 8px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 .text-danger{
     color: #E71800 !important;
+}
+.cover{
+    background: url('../src/assets/cover.png');
+    height: 196px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
